fix overflow issue

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -10,7 +10,7 @@
     @include respond(phone){
     width:100%;
     }
-    width:60%;
+    width:  500px;
     border:none;
     border-bottom:1px solid #757575;
   }
