--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow-x: hidden;
   font-family: 'Work Sans', sans-serif;
   font-size: 16px;
   align-items: center;
