--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,7 +12,6 @@
 
 * {
   scroll-behavior: smooth;
-  overflow-x: hidden;
    }
 
 
